--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 
 <body>
-  <h2>ပြည်သူ့အောင်ပွဲ - အလယ်ပိုင်းတိုင်း</h2>
+  <!-- <h2>ပြည်သူ့အောင်ပွဲ - အလယ်ပိုင်းတိုင်း</h2> -->
+  <h2 style="display: block;"> </h2>
   <div class="denizen">
     <div id="berry">
       <div class="name">
-        <input type="text" value="TEAM 1"></input>
+        <input type="text" value="CDM"></input>
       </div>
       <div class="main">
         <div class="parts">
@@ -40,7 +41,7 @@
   <div class="denizen">
     <div id="choco">
       <div class="name">
-        <input type="text" value="TEAM 2"></input>
+        <input type="text" value="PDF"></input>
       </div>
       <div class="main">
         <div class="parts">
@@ -61,6 +62,7 @@
       </div>
     </div>
   </div>
+  <h1 class="winner hidden">WINNER!</h1>
   <script src="script.js" charset="utf-8"></script>
 </body>
 
