changed background and colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="denizen">
     <div id="berry">
       <div class="name">
-        <input type="text" value="CDM"></input>
+        <input type="text" value="TEAM CDM"></input>
       </div>
       <div class="main">
         <div class="parts">
@@ -41,7 +41,7 @@
   <div class="denizen">
     <div id="choco">
       <div class="name">
-        <input type="text" value="PDF"></input>
+        <input type="text" value="TEAM PDF"></input>
       </div>
       <div class="main">
         <div class="parts">
